clang/test/BSC/Positive/Ownership/member_func/member_func.cbs
// RUN: %clang_cc1 -ast-dump -verify %s
// expected-no-diagnostics

struct S {};
struct G<T> {};

void struct S::foo1(This* borrow this) {}
void struct S::foo2(const This* borrow this) {}
void struct S::foo3(This* owned this) {
    struct S* a = (struct S*)this;
}
void struct S::foo4(struct S* borrow this) {}
void struct S::foo5(const struct S* borrow this) {}
void struct S::foo6(struct S* owned this) {
    struct S* a = (struct S*)this;
}

void struct G<T>::foo1(This* borrow this) {}
void struct G<T>::foo2(const This* borrow this) {}
void struct G<T>::foo3(This* owned this) {
    struct G<T>* a = (struct G<T>*)this;
}
void struct G<T>::foo4(struct G<T>* borrow this) {}
void struct G<T>::foo5(const struct G<T>* borrow this) {}
void struct G<T>::foo6(struct G<T>* owned this) {
    struct G<T>* a = (struct G<T>*)this;
}

void int::foo1(This* borrow this) {}
void int::foo2(const This* borrow this) {}
void int::foo3(This* owned this) {
    int* a = (int*)this;
}
void int::foo4(int* borrow this) {}
void int::foo5(const int* borrow this) {}
void int::foo6(int* owned this) {
    int* a = (int*)this;
}

int main() {
    struct S s1;
    s1.foo1();
    s1.foo2();
    struct S s2;
    s2.foo4();
    s2.foo5();

    struct G<int> g1;
    g1.foo1();
    g1.foo2();
    struct G<int> g2;
    g2.foo4();
    g2.foo5();

    int a1 = 5;
    a1.foo1();
    a1.foo2();
    int a2 = 5;
    a2.foo4();
    a2.foo5();
    return 0;
}