clang/test/BSC/Negative/Ownership/Owned/generic_with_owned_args1/generic_with_owned_args1.cbs
// RUN: %clang_cc1 -ast-dump -verify %s


// issue I8M1X8 testcase

int a = 0;

owned int* Func_1<T>()
{
    T tmp = (owned int*)a;  //expected-warning {{cast to 'owned int *' from smaller integer type 'int'}} [-Wincompatible-pointer-types-discards-qualifiers] expected-warning {{cast to 'owned int *' from smaller integer type 'int'}} [-Wincompatible-pointer-types-discards-qualifiers]
    return tmp;
}

int main()
{
    owned int* res = Func_1<owned int*>(); //expected-note {{in instantiation of function template specialization 'Func_1<owned int *>' requested here}}

    if (*res != 0) {
        return 1;
    }
    return 0;
}
